css fix (both divs wrapped with flexbox)

--- a/snake.css
+++ b/snake.css
@@ -5,46 +5,34 @@
 html,body{
     height: 100%;
     background-color: azure;
+    overflow: hidden;
 }
 
-.parent{
-    height: 0%;
+.wrapper{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
 
-.parent2{
-    height: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
 #MyCanvas {
     background-color: white;
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
     box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
 }
 
 #score{
      font-family: cursive;
     border: 1px black;
-    border-radius: 100px 100px 0px 0px;
+    border-radius: 5px 5px 0px 0px;
     width: 65px;
     height: 45px;
     background-color: white;
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: auto;
-    margin-right: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 0 0px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
-    margin-top: 120px;
 }
